--- a/cssgrid2.html
+++ b/cssgrid2.html
@@ -20,6 +20,23 @@
             border: solid 5px dodgerblue;
             background: #fff;
         }
+
+        body {
+            display: grid;
+            /* grid-template-columns: 1fr 1fr 1fr; */
+            grid-template-columns: 
+                [inicio] 1fr 
+                [metade-1 meio-1] 1fr 
+                [metade-2 meio-2] 1fr [fim];
+            /* grid-template-columns: repeat(3,1fr); */
+        }
+
+        .d1 {
+            grid-column-start: metade-2;
+            grid-column-end: fim;
+            grid-column: meio-1 / fim;
+            grid-row: 1 / span 2;
+        }
     </style>
 </head>
 
