--- a/desafioCard.html
+++ b/desafioCard.html
@@ -5,7 +5,52 @@
     <meta charset="UTF-8">
     <title>Desafio Card</title>
     <style>
-        /* ... */
+        .curso {
+            display: inline-block;
+            float: left;
+            vertical-align: top;
+            font-family: Verdana, sans-serif;
+            height: 300px;
+            width: 260px;
+            border: solid 1px #CCC;
+            padding: 5px;
+            margin: 5px 20px;
+            box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.3);
+        }
+
+        .curso img {
+            width: 100%;
+            max-height: 50%;
+        }
+
+        .curso-info {
+            padding: 10px;
+            height: 90px;
+            overflow: hidden;
+        }
+
+        .curso-info h4{
+            font-size: 1.4em;
+            font-weight: 100;
+            margin: 0;
+        }
+
+        .curso-preco {
+            float: right;
+            padding: 10px;
+        }
+
+        .preco-de{
+            text-decoration: line-through;
+            color:firebrick;
+        }
+
+        .preco-por{
+            font-size: 1.4em;
+            font-weight: 900;
+            color:darkgreen;
+        }
+
     </style>
 </head>
 
@@ -16,7 +61,7 @@
     <img src="http://files.cod3r.com.br/curso-web/card.png" height="340" alt="Objetivo">
 
     <h2>Resultado</h2>
-    <div>
+    <div class="container">
         <div class="curso">
             <img src="http://files.cod3r.com.br/curso-web/curso1.jpg" />
             <div class="curso-info">
