--- a/display.html
+++ b/display.html
@@ -5,11 +5,30 @@
     <meta charset="UTF-8">
     <title>Display</title>
     <style>
-        /* ... */
+        body {
+            font-size: 40px;
+            color: #fff;
+            background-color: coral;
+        }
+
+        ul { padding: 0;}
+        div { background-color: seagreen;}
+        span { background-color: dodgerblue;}
+        li { background-color: purple;}
+
+        div, span, li {
+            width: 50%;
+            width: 200px;
+            height: 80px;
+            padding-top: 30px;
+            text-align: center;
+            display: inline-block;
+        }
     </style>
 </head>
 
 <body>
+    <div>Texto 1</div>
     <div>Texto 1</div>
     <span>Texto 2</span>
     <span>Texto 3</span>
