--- a/heranca.html
+++ b/heranca.html
@@ -5,7 +5,18 @@
     <meta charset="UTF-8">
     <title>Herança</title>
     <style>
-        /* ... */
+        body {
+            font-family: monospace;
+            font-size: 40px;
+            border: solid 3px red;
+            padding: 50px;
+            margin: 10px 100px 400px 20px ;
+        }
+
+        div {
+            border: inherit;
+            padding: inherit;
+        }
     </style>
 </head>
 
